--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  font-family: sans-serif;
 }
 
 .nav-container {
@@ -41,7 +42,7 @@ body {
   color: white;
 }
 
-.hero-section h1 {
+.hero-section h2 {
   color: #f9faf8;
   font-size: 48px;
   font-weight: 900;
@@ -71,4 +72,55 @@ button {
   padding-bottom: 5px;
   border-style: none;
   font-weight: 900;
+}
+
+.random-info {
+  text-align: center;
+  font-size: 32px;
+  font-weight: 900;
+  color: #1f2937;
+}
+
+.flex-cards {
+  display: flex;
+  justify-content: center;
+  gap: 50px;
+}
+
+.flex-cards > div {
+  background-color: #f1f1f1;
+  margin: 10px;
+  padding: 80px;
+  font-size: 30px;
+  border-radius: 8%;
+  border: 5px solid dodgerblue;
+}
+
+.flex-subtext {
+  display: flex;
+  justify-content: center;
+  gap: 95px;
+}
+.flex-subtext p {
+  font-size: 18px;
+  text-wrap: wrap;
+  width: 150px;
+  text-align: center;
+  margin: 0px;
+}
+
+.quote-text {
+  font-size: 36px;
+  width: 820px;
+  text-wrap: wrap;
+  margin: auto;
+  padding-top: 120px;
+  font-style: italic;
+  font-weight: 100;
+}
+
+.third-part-background {
+  background-color: #e5e7eb;
+  height: 400px;
+  margin-top: 120px;
 }
