--- a/styles.css
+++ b/styles.css
@@ -124,3 +124,49 @@ button {
   height: 400px;
   margin-top: 120px;
 }
+
+.third-part-background p {
+  font-size: 25px;
+  font-weight: 700;
+  position: relative;
+  left: 800px;
+}
+
+.blue-bar-call-to-action {
+  background-color: #3882f6;
+  height: 150px;
+  width: 1000px;
+  margin: auto;
+  border-radius: 10px;
+  margin-top: 100px;
+  margin-bottom: 100px;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.blue-bar-call-to-action button {
+  border: 2px solid rgb(255, 255, 255);
+  height: 42px;
+  margin-top: 50px;
+  width: 120px;
+}
+.blue-bar-call-to-action h3 {
+  font-size: 24px;
+  font-weight: 900;
+  color: white;
+}
+.blue-bar-call-to-action p {
+  font-weight: 900;
+  color: white;
+}
+.footer {
+  background-color: #1f2937;
+}
+
+.call-to-action-position {
+  margin-top: 20px;
+}
+
+.call-to-action-position p {
+  margin-top: -20px;
+}
